--- a/src/components/styles/Grid.css
+++ b/src/components/styles/Grid.css
@@ -1,15 +1,33 @@
 .grid {
     background-color: #D9D9D9;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    display: grid;
-    grid-gap: 15px;
-    grid-template-rows: repeat(4, 40px);
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-flow: row dense;
-    min-width: 170vh;
+    display: block;
+}
+
+.paneStyle {
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    height: 40px;
+    min-width: 40px;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+};
+
+.button-container {
+    padding-top: 20px;
+}
+
+.button {
+    cursor: pointer;
+    margin-top: 20px;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    height: 40px;
+    width: 300px;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(72, 72, 72);
 }
