--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -1,12 +1,14 @@
 .home {
-    display:flex;
+    display: block;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
     padding: 150px;
 }
 .home-blocks {
+    width: 100%;
     display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 .home-blocks-separator {
     width: 20px;
@@ -16,5 +18,6 @@
     height: 0;
   }
 .home-grid {
-    padding: 30px;
+    padding-top: 30px;
+    display:block;
 }
